--- a/docs/02-app/01-building-your-application/03-rendering/02-client-components.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/02-client-components.mdx
@@ -18,8 +18,7 @@ There are a couple of benefits to doing the rendering work on the client, includ
 
 To use Client Components, you can add the React [`"use client"` directive](https://react.dev/reference/react/use-client) at the top of a file, above your imports.
 
-`"use client` is used to declare a [boundary](/docs/app/building-your-application/rendering#network-boundary) between a Server and Client Component modules. This means
-that by defining a `"use client"` in a file, all other modules imported into it, including child components, are considered part of the client bundle - and will be rendered by React on the client.
+`"use client` is used to declare a [boundary](/docs/app/building-your-application/rendering#network-boundary) between a Server and Client Component modules. This means that by defining a `"use client"` in a file, all other modules imported into it, including child components, are considered part of the client bundle - and will be rendered by React on the client.
 
 ```tsx filename="app/counter.tsx" highlight={1} switcher
 'use client'
@@ -63,19 +62,19 @@ export default function Counter() {
   height="1320"
 />
 
-> **Defining multiple `use client` boundaries**:
+> **Defining multiple `use client` entry points**:
 >
-> You can define multile "use client" boundaries in your React Component tree. This allows you to split your application into multiple bundles (or branches), and only render the components that are needed for a route at runtime.
+> You can define multiple "use client" entry points in your React Component tree. This allows you to split your application into multiple client bundles (or branches).
 >
 > However, `"use client"` doesn't need to be defined in every component that needs to be rendered on the client. Once you define the boundary, all components and modules imported into it, or in other words, the branch in the tree is considered part of the client bundle.
 
 ## How are Client Components Rendered?
 
-In Next.js, Client Components are rendered differently depending on whether the user is visiting your application for the first time or if it's a subsequent navigation.
+In Next.js, Client Components are rendered differently depending on whether the request is part of a full page load (an initial visit to your application or a page reload triggered by a browser refresh) or a subsequent navigation.
 
-### Initial Visit
+### Full page load
 
-To optimize the initial page load, Next.js will use React's APIs to render a static HTML preview on the server for both Client and Server Components. This means, when the user first visits your application, they will see the content of the page immediately, without having to wait for the client to download and parse the Client Component JavaScript bundle.
+To optimize the initial page load, Next.js will use React's APIs to render a static HTML preview on the server for both Client and Server Components. This means, when the user first visits your application, they will see the content of the page immediately, without having to wait for the client to download, parse, and execute the Client Component JavaScript bundle.
 
 On the server:
 
@@ -98,8 +97,8 @@ On subsequent navigations, Client Components are rendered entirely on the client
 
 This means the Client Component JavaScript bundle is downloaded and parsed. Once the bundle is ready, React will use the RSC Payload to reconcile the Client and Server Component trees, and update the DOM.
 
-## Switching back to the Server Environment
+## Going back to the Server Environment
 
-Sometimes, after you've declared the ``"use client"` boundary, you may want to switch back to the server environment. For example, you may want to reduce the client bundle size, fetch data on the server, or use an API that is only available on the server.
+Sometimes, after you've declared the ``"use client"` boundary, you may want to go back to the server environment. For example, you may want to reduce the client bundle size, fetch data on the server, or use an API that is only available on the server.
 
-In cases like this, you can interleave Client and Server Components in the same route, see the [Composition Patterns](/docs/app/building-your-application/rendering#composition-patterns) documentation for implementation details.
+You can keep code on the server even though it's theoretically nested inside Client Components by interleaving Client and Server Components and Server Actions. See the [Composition Patterns](/docs/app/building-your-application/rendering#composition-patterns) page for more information.
