--- a/docs/02-app/01-building-your-application/03-rendering/03-composition-patterns.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/03-composition-patterns.mdx
@@ -24,7 +24,7 @@ Here's a quick summary of the different use cases for Server and Client Componen
 
 ## Interleaving Server and Client Components
 
-When architecting your application, you can interleave Client and Server Components. It may be helpful to vizualise your UI as a tree of components. Starting with the [root layout](/docs/app/building-your-application/layout), which is a Server Component, you can then render certain branches on the client by adding the [`"use client"`]() directive.
+When architecting your application, you can interleave Client and Server Components. It may be helpful to vizualise your UI as a tree of components. Starting with the [root layout](/docs/app/building-your-application/pages-and-layouts#root-layout-required), which is a Server Component, you can then render certain branches on the client by adding the [`"use client"`]() directive.
 
 {/* Diagram - interleaving */}
 
