--- a/docs/02-app/02-api-reference/04-functions/server-actions.mdx
+++ b/docs/02-app/02-api-reference/04-functions/server-actions.mdx
@@ -9,7 +9,7 @@ related:
     - app/building-your-application/data-fetching/forms-and-mutations
 ---
 
-{/* TODO: This page will need to be integrated into the React docs */}
+{/* TODO: This page will need to link back to React docs mentioned at the bottom */}
 
 Next.js integrates with React Actions to provide a built-in solution for [server mutations](/docs/app/building-your-application/data-fetching/forms-and-mutations).
 
