More broken links

--- a/docs/02-app/01-building-your-application/03-rendering/01-server-components.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/01-server-components.mdx
@@ -37,7 +37,7 @@ On the server, Next.js uses React's APIs to orchestrate rendering. The rendering
 
 Each chunk is rendered in two steps:
 
-1. React renders Server Components into a special data format called the [React Server Component Payload (RSC Payload)]().
+1. React renders Server Components into a special data format called the **React Server Component Payload (RSC Payload)**.
 2. Next.js uses the RSC Payload and Client Component JavaScript instructions to render **HTML** on the server.
 
 {/* Rendering Diagram */}
