--- a/docs/02-app/01-building-your-application/03-rendering/index.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/index.mdx
@@ -89,7 +89,7 @@ It may be helpful to think about module graphs as a visual representation of how
   height=""
 />
 
-The Network Boundary is defined with a React convention called ["use client"](). There's also a ["use server"]() convention, which tells React to do some computational work on the server.
+The Network Boundary is defined with a React convention called "use client". There's also a "use server" convention, which tells React to do some computational work on the server.
 
 ## Building Hybrid Applications
 
@@ -115,4 +115,4 @@ If you need to access the server from the client, you send a **new** request to 
 
 In practice, this model encourages developers to think about what they want to execute on the server first, before sending the result to the client and making the application interactive.
 
-This concept will become clearer when we look at how you can [interleave client and server components]() in the same component tree.
+This concept will become clearer when we look at how you can [interleave client and server components](/docs/app/building-your-application/rendering/composition-patterns) in the same component tree.
