--- a/docs/02-app/01-building-your-application/03-rendering/02-client-components.mdx
+++ b/docs/02-app/01-building-your-application/03-rendering/02-client-components.mdx
@@ -78,7 +78,7 @@ To optimize the initial page load, Next.js will use React's APIs to render a sta
 
 On the server:
 
-1. React renders Server Components into a special data format called the [React Server Component Payload (RSC Payload)](), which includes references to Client Components.
+1. React renders Server Components into a special data format called the **React Server Component Payload (RSC Payload)**, which includes references to Client Components.
 2. Next.js uses the RSC Payload and Client Component JavaScript instructions to render **HTML** for the route on the server.
 
 Then, on the client:
